--- a/templates/hello.html
+++ b/templates/hello.html
@@ -9,6 +9,14 @@
       <form method="POST" action="http://127.0.0.1:5000/result">
           <p>First Name: <input type="text" name="First" /></p>
           <p>Last Name: <input type="text" name="Last" /></p>
+          <p>Age: <input type="number" name="Age" /></p>
+          <p>Athletic Team: <select name="Team">
+            <option value="basketball">Basketball</option>
+            <option value="baseball">Baseball</option>
+            <option value="football">Football</option>
+            <option value="volleyball">Volleyball</option>
+          </select>
+          </p>
           <p><input type="submit" value="submit" /></p>
       </form>
       
