Fixed routing from local host

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-      <form method="POST" action="http://127.0.0.1:5000/result">
+      <form method="POST" action="/result">
           <p>First Name: <input type="text" name="First" /></p>
           <p>Last Name: <input type="text" name="Last" /></p>
           <p>Age: <input type="number" name="Age" /></p>
