--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,7 +2,8 @@
     <html>
     <head>
       <meta charset="utf-8">
-      <title>Python form submission example</title>
+      <title>Drug Education Project</title>
+      <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/style.css') }}" />
     </head>
     <body>
 
@@ -19,6 +20,6 @@
           </p>
           <p><input type="submit" value="submit" /></p>
       </form>
-      
+
     </body>
   </html>
