--- a/templates/result.html
+++ b/templates/result.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Python Testing</title>
+    <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/style.css') }}" />
   </head>
 
   <body>
