--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -49,3 +49,10 @@ body {
   background-color: #eee;
   border: 4px solid #13294B;
 }
+
+.web-form {
+  background-color: #FFFFFF;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
