--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,20 +6,18 @@
       <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/style.css') }}" />
     </head>
     <body>
-
-      <form method="POST" action="/result">
-          <p>First Name: <input type="text" name="First" /></p>
-          <p>Last Name: <input type="text" name="Last" /></p>
-          <p>Age: <input type="number" name="Age" /></p>
-          <p>Athletic Team: <select name="Team">
-            <option value="basketball">Basketball</option>
-            <option value="baseball">Baseball</option>
-            <option value="football">Football</option>
-            <option value="volleyball">Volleyball</option>
-          </select>
-          </p>
-          <p><input type="submit" value="submit" /></p>
-      </form>
-
+      <div class="web-form">
+        <form method="POST" action="/result">
+            <p>Please choose which team you play for:</p>
+            <p>Athletic Team: <select name="Team">
+              <option value="basketball">Basketball</option>
+              <option value="baseball">Baseball</option>
+              <option value="football">Football</option>
+              <option value="volleyball">Volleyball</option>
+            </select>
+            </p>
+            <p><input type="submit" value="Submit" /></p>
+        </form>
+      </div>
     </body>
   </html>
